--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -18,9 +18,10 @@
     </div>
 
     <br/><br/>
-
     <!-- found-items should be implemented as a component -->
     <found-items found="narrowItDown.found" on-remove="narrowItDown.removeItem(index)"></found-items>
+
+    <div class="error" ng-if="narrowItDown.searchError">Nothing found</div>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
   <script src="app.js"></script>
